--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,9 +1,8 @@
 {
-  "type": "module",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "jsonwebtoken": "^9.0.2",
-    "socket.io": "^4.8.0"
+    "cars": "^1.1.6",
+    "express": "^4.21.1",
+    "socket.io": "^4.8.0",
+    "type": "module"
   }
 }
